--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Шапка сайта-->
     <header>
       <nav>
         <a href="/">
-          WebStudio
+          Web Studio
         </a>
 
         <ul>
@@ -25,118 +26,227 @@
       </nav>
     </header>
 
-    <div>
+    <!--Уникальный контент-->
+    <main>
+      <!--Основное-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <img src="./Images/header_img.png" alt="#" width="1600" />
         <a href="">Заказать услугу</a>
       </section>
-    </div>
 
-    <section>
-      <h2>Наши преимущества</h2>
-      <ul>
-        <li>
-          <img src="./Images/antenna_1.svg" alt="#" />
-          <h3>Внимание к деталям</h3>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <img src="./Images/clock_1.svg" alt="#" />
-          <h3>Пунктуальность</h3>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <img src="./Images/diagram_1.svg" alt="#" />
-          <h3>Планирование</h3>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <img src="./Images/astronaut_1.svg" alt="#" />
-          <h3>Современные технологии</h3>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
-    </section>
+      <!--Преимущества-->
+      <section>
+        <h2>Наши преимущества</h2>
+        <ul>
+          <li>
+            <img src="./Images/antenna_1.svg" alt="#" />
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <img src="./Images/clock_1.svg" alt="#" />
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <img src="./Images/diagram_1.svg" alt="#" />
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <img src="./Images/astronaut_1.svg" alt="#" />
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li>
-          <img src="./Images/descapps.png" alt="" width="370" />
-          <h3>Десктопные приложения</h3>
-        </li>
-        <li>
-          <img src="./Images/mobapps.png" alt="" width="370" />
-          <h3>Мобильные приложения</h3>
-        </li>
-        <li>
-          <img src="./Images/design.png" alt="" width="370" />
-          <h3>Дизайнерские решения</h3>
-        </li>
-      </ul>
-    </section>
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="./Images/descapps.jpg" alt="#" width="370" />
+            <h3>Десктопные приложения</h3>
+          </li>
+          <li>
+            <img src="./Images/mobapps.jpg" alt="#" width="370" />
+            <h3>Мобильные приложения</h3>
+          </li>
+          <li>
+            <img src="./Images/design.jpg" alt="#" width="370" />
+            <h3>Дизайнерские решения</h3>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./Images/product_design.png" alt="#" width="270" />
-          <h3 lang="en">John Smith</h3>
-          <h4 lang="en">Product Designer</h4>
-        </li>
-        <li>
-          <img src="./Images/frontend_developer.png" alt="#" width="270" />
-          <h3 lang="en">Marta Stewart</h3>
-          <h4 lang="en">Frontend Developer</h4>
-        </li>
-        <li>
-          <img src="./Images/marketing.png" alt="#" width="270" />
-          <h3 lang="en">Robert Jakis</h3>
-          <h4 lang="en">Marketing</h4>
-        </li>
-        <li>
-          <img src="./Images/ui_design.png" alt="#" width="270" />
-          <h3 lang="en">Martin Doe</h3>
-          <h4 lang="en">UI Designer</h4>
-        </li>
-      </ul>
-    </section>
+      <!--Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./Images/product_design.jpg" alt="#" width="270" />
+            <h3 lang="en">John Smith</h3>
+            <p lang="en">Product Designer</p>
+            <ul>
+              <li>
+                <a href="#" aria-label="ссылка на instagram">instagram</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на twitter">twitter</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на facebook">facebook</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на linkedin">linkedin</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./Images/frontend_developer.jpg" alt="#" width="270" />
+            <h3 lang="en">Marta Stewart</h3>
+            <p lang="en">Frontend Developer</p>
+            <ul>
+              <li>
+                <a href="#" aria-label="ссылка на instagram">instagram</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на twitter">twitter</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на facebook">facebook</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на linkedin">linkedin</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./Images/marketing.jpg" alt="#" width="270" />
+            <h3 lang="en">Robert Jakis</h3>
+            <p lang="en">Marketing</p>
+            <ul>
+              <li>
+                <a href="#" aria-label="ссылка на instagram">instagram</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на twitter">twitter</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на facebook">facebook</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на linkedin">linkedin</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./Images/uldesign.jpg" alt="#" width="270" />
+            <h3 lang="en">Martin Doe</h3>
+            <p lang="en">UI Designer</p>
+            <ul>
+              <li>
+                <a href="#" aria-label="ссылка на instagram">instagram</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на twitter">twitter</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на facebook">facebook</a>
+              </li>
+              <li>
+                <a href="#" aria-label="ссылка на linkedin">linkedin</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Постоянные клиенты</h2>
-      <ul>
-        <li>
-        <a href="#"></a><img src="./Images/Client_1.svg" alt="Логотип компании" />
-        </li>
-        <li>
-        <a href="#"><img src="./Images/Client_2.svg" alt="Логотип компании" />
-        </li>
-        <li>
-        <a href="#"><img src="./Images/Client_3.svg" alt="Логотип компании" />
-        </li>
-        <li>
-        <a href="#"><img src="./Images/Client_4.svg" alt="Логотип компании" />
-        </li>
-        <li>
-        <a href="#"><img src="./Images/Client_5.svg" alt="Логотип компании" />
-        </li>
-        <li>
-        <a href="#"><img src="./Images/Client_6.svg" alt="Логотип компании" />
-        </li>
-      </ul>
-    </section>
+      <!--Постоянные клиенты-->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_1.svg" alt="Логотип компании"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_2.svg" alt="Логотип компании"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_3.svg" alt="Логотип компании"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_4.svg" alt="Логотип компании"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_5.svg" alt="Логотип компании"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./Images/Client_6.svg" alt="Логотип компании"
+            /></a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!--Подвал сайта-->
+    <footer>
+      <div>
+        <a href="/">Web Studio</a>
+        <address>
+          г. Киев, пр-т Леси Украинки, 26<br />
+          <a href="mailto:info@example.com">info@example.com</a><br />
+          <a href="tel:+380991111111">+380991111111</a>
+        </address>
+      </div>
+
+      <div>
+        <b>Присоединяйтесь</b>
+        <ul>
+          <li>
+            <a href="#" aria-label="ссылка на instagram">instagram</a>
+          </li>
+          <li>
+            <a href="#" aria-label="ссылка на twitter">twitter</a>
+          </li>
+          <li>
+            <a href="#" aria-label="ссылка на facebook">facebook</a>
+          </li>
+          <li>
+            <a href="#" aria-label="ссылка на linkedin">linkedin</a>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <b>Подпишитесь на рассылку</b>
+      </div>
+
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
